services/notes/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-db
  namespace: notes
  labels:
    app: bookstack-db
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
    name: mariadb
  selector:
    app: bookstack-db
