services/notes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack-db
  namespace: notes
  labels:
    app: bookstack-db
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: bookstack-db
