services/notes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: notes
  labels:
    app: bookstack
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: bookstack
